--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ranjeet Aloriya</title>
-    <link rel="icon" type="image/x-icon" href="me.ico">
+    <link rel="icon" type="image/x-icon" href="logo.ico">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
     <script src="https://kit.fontawesome.com/f1bceb7c73.js" crossorigin="anonymous"></script>
