--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ Ready to take proactive steps towards enhancing your data security measures? Par
         <h1 class="sub-title">Our Leadership</h1>
         <div class="work-list">
             <div class="work">
-                <img src="welcome.jpg" alt="Devender Malik">
+                <img src="welcome.jpeg" alt="Devender Malik">
                 <div class="layer">
                     <h3>Devender Malik</h3>
                     <p>Founder & Chief Executive Officer</p>
@@ -111,7 +111,7 @@ Ready to take proactive steps towards enhancing your data security measures? Par
                 </div>
             </div>
             <div class="work">
-                <img src="welcome.jpg" alt="Akshat Sethi">
+                <img src="welcome.jpeg" alt="Akshat Sethi">
                 <div class="layer">
                     <h3>Akshat Sethi</h3>
                     <p>Co-Founder & Chief Operation Officer</p>
@@ -119,7 +119,7 @@ Ready to take proactive steps towards enhancing your data security measures? Par
                 </div>
             </div>
             <div class="work">
-                <img src="welcome.jpg" alt="Ranjeet Aloriya">
+                <img src="welcome.jpeg" alt="Ranjeet Aloriya">
                 <div class="layer">
                     <h3>Ranjeet Aloriya</h3>
                     <p>Co-Founder & Chief Technology Officer</p>
