--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ Ready to take proactive steps towards enhancing your data security measures? Par
     </section>
     <div class="bottom-navbar">
         <div class="social-icons">
-            <a href="https://www.linkedin.com/in/ranjeet-aloriya/" style="color: #0077b5;" target="_blank"><i
+            <a href="https://www.linkedin.com/company/bits-and-bytes-pvt-ltd/" style="color: #0077b5;" target="_blank"><i
                     class="fab fa-linkedin"></i></a>
             <a href="https://github.com/Ranjeet-Aloriya" style="color: #333;" target="_blank"><i
                     class="fab fa-github"></i></a>
