--- a/dbr.html
+++ b/dbr.html
@@ -20,12 +20,12 @@
 
     <div class="navigation-bar">
         <div>
-            <a href="#home">Home</a>
-            <a href="#about">About</a>
-            <a href="#services">Services</a>
-            <a href="#portfolio">Leadership</a>
-<!--             <a href="Ranjeet_Aloriya.pdf" download>Resume</a> -->
-            <a href="#contact">Contact Us</a>
+            <a href="index.html#home">Home</a>
+            <a href="index.html#about">About</a>
+            <a href="index.html#services">Services</a>
+            <a href="index.html#team">Leadership</a>
+            <a href="Ranjeet_Aloriya.pdf" download>Resume</a>
+            <a href="index.html#contact">Contact Us</a>
         </div>
         <div>
             <a href="mailto:info@bitsnbytes.in">info@bitsnbytes.in</a>
