--- a/dbr.html
+++ b/dbr.html
@@ -24,7 +24,7 @@
             <a href="index.html#about">About</a>
             <a href="index.html#services">Services</a>
             <a href="index.html#team">Leadership</a>
-            <a href="Ranjeet_Aloriya.pdf" download>Resume</a>
+<!--             <a href="Ranjeet_Aloriya.pdf" download>Resume</a> -->
             <a href="index.html#contact">Contact Us</a>
         </div>
         <div>
