--- a/dm.html
+++ b/dm.html
@@ -20,10 +20,10 @@
 
     <div class="navigation-bar">
         <div>
-            <a href="#home">Home</a>
-            <a href="#about">About</a>
-            <a href="#services">Services</a>
-            <a href="#portfolio">Leadership</a>
+            <a href="index.html#home">Home</a>
+            <a href="index.html#about">About</a>
+            <a href="index.html#services">Services</a>
+            <a href="index.html#team">Leadership</a>
 <!--             <a href="Ranjeet_Aloriya.pdf" download>Resume</a> -->
             <a href="#contact">Contact Us</a>
         </div>
