--- a/nl.html
+++ b/nl.html
@@ -23,7 +23,7 @@
             <a href="index.html#home">Home</a>
             <a href="index.html#about">About</a>
             <a href="index.html#services">Services</a>
-            <a href="index.html#portfolio">Leadership</a>
+            <a href="index.html#team">Leadership</a>
 <!--             <a href="Ranjeet_Aloriya.pdf" download>Resume</a> -->
             <a href="#contact">Contact Us</a>
         </div>
