--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="#home">Home</a>
             <a href="#about">About</a>
             <a href="#services">Services</a>
-            <a href="#portfolio">Leadership</a>
+            <a href="#team">Leadership</a>
 <!--             <a href="Ranjeet_Aloriya.pdf" download>Resume</a> -->
             <a href="#contact">Contact Us</a>
         </div>
@@ -99,7 +99,7 @@ Ready to take proactive steps towards enhancing your data security measures? Par
         </div>
     </section>
 
-    <section id="portfolio" class="main">
+    <section id="team" class="main">
         <h1 class="sub-title">Our Leadership</h1>
         <div class="work-list">
             <div class="work">
