--- a/dm.html
+++ b/dm.html
@@ -15,7 +15,7 @@
     <div class="portfolio-box">
         <div class="name">Bits and Bytes</div>
         <div class="job-title">The One Stop Destination For All Your Cyber Security Needs</div>
-        <div class="education">info@bitsnbytes.in, +91 999-922-1034</div>
+        <div class="education">info@bitsnbytes.in, +91 999-922-1034, +91 940-660-6239</div>
     </div>
 
     <div class="navigation-bar">
