--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
 <body>
 
     <div class="portfolio-box">
-        <div class="name">Bits and Bytes</div>
-        <div class="job-title">The One Stop Destination For All Your Cyber Security Needs</div>
-        <div class="education">info@bitsnbytes.in, +91 999-922-1034, +91 940-660-6239</div>
+        <div>
+            <div class="name">Bits and Bytes Corporate Support Services</div>
+            <div class="job-title">The One Stop Destination For All Your Cyber Security Needs</div>
+            <div class="education">info@bitsnbytes.in, +91 999-922-1034</div>
+        </div>
+        <div class="company-logo">
+            <img src="logo.png" alt="company logo">
+        </div>
     </div>
 
     <div class="navigation-bar">
