--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div>
             <div class="name">Bits and Bytes Corporate Support Services</div>
             <div class="job-title">The One Stop Destination For All Your Cyber Security Needs</div>
-            <div class="education">info@bitsnbytes.in, +91 999-922-1034</div>
+            <div class="education">info@bitsnbytes.in, +91 999-922-1034, +91 940-660-6239</div>
         </div>
         <div class="company-logo">
             <img src="logo.png" alt="company logo">
