--- a/nl.html
+++ b/nl.html
@@ -25,10 +25,10 @@
 
     <div class="navigation-bar">
         <div>
-            <a href="index.html#home">Home</a>
-            <a href="index.html#about">About</a>
-            <a href="index.html#services">Services</a>
-            <a href="index.html#team">Leadership</a>
+            <a href="./#home">Home</a>
+            <a href="./#about">About</a>
+            <a href="./#services">Services</a>
+            <a href="./#team">Leadership</a>
 <!--             <a href="Ranjeet_Aloriya.pdf" download>Resume</a> -->
             <a href="#contact">Contact Us</a>
         </div>
@@ -111,6 +111,25 @@
             <a href="mailto:ranjeet.aloriya@gmail.com" style="color: #fff;">info@bitsnbytes.in</a>
         </div>
     </div>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const links = document.querySelectorAll('.navigation-bar a');
+            links.forEach(link => {
+                link.addEventListener('click', smoothScroll);
+            });
+
+            function smoothScroll(e) {
+                e.preventDefault();
+                const targetId = this.getAttribute('href');
+                const targetElement = document.querySelector(targetId);
+                if (targetElement) {
+                    targetElement.scrollIntoView({
+                        behavior: 'smooth'
+                    });
+                }
+            }
+        });
+    </script>
 
     <script src="script.js"></script>
 </body>
