--- a/dbr.html
+++ b/dbr.html
@@ -25,8 +25,8 @@
 
     <div class="navigation-bar">
         <div>
-            <a href="./#home">Home</a>
-            <a href="./#about">About</a>
+            <a href="./home">Home</a>
+            <a href="./about">About</a>
             <a href="./#services">Services</a>
             <a href="./#team">Leadership</a>
 <!--             <a href="Ranjeet_Aloriya.pdf" download>Resume</a> -->
