--- a/dbr.html
+++ b/dbr.html
@@ -30,7 +30,7 @@
             <a href="./#services">Services</a>
             <a href="./#team">Leadership</a>
 <!--             <a href="Ranjeet_Aloriya.pdf" download>Resume</a> -->
-            <a href="./#contact">Contact Us</a>
+            <a href="#contact">Contact Us</a>
         </div>
         <div>
             <a href="mailto:info@bitsnbytes.in">info@bitsnbytes.in</a>
