--- a/dbr.html
+++ b/dbr.html
@@ -25,10 +25,10 @@
 
     <div class="navigation-bar">
         <div>
-            <a href="index/#home">Home</a>
-            <a href="index/#about">About</a>
-            <a href="./#services">Services</a>
-            <a href="./#team">Leadership</a>
+            <a href="index#home">Home</a>
+            <a href="index#about">About</a>
+            <a href="index.html#services">Services</a>
+            <a href="index.html#team">Leadership</a>
 <!--             <a href="Ranjeet_Aloriya.pdf" download>Resume</a> -->
             <a href="#contact">Contact Us</a>
         </div>
