--- a/dbr.html
+++ b/dbr.html
@@ -31,8 +31,8 @@
 
     <div class="navigation-bar">
         <div>
-            <a href="index#services">Home</a>
-            <a href="index.html#services">About</a>
+            <a href="#home">Home</a>
+            <a href="index#about">About</a>
             <a href="index.html#services">Services</a>
             <a href="index.html#team">Leadership</a>
 <!--             <a href="Ranjeet_Aloriya.pdf" download>Resume</a> -->
