--- a/dbr.html
+++ b/dbr.html
@@ -8,13 +8,6 @@
     <link rel="stylesheet" href="services.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
     <script src="https://kit.fontawesome.com/f1bceb7c73.js" crossorigin="anonymous"></script>
-    <script>
-        function redirectToSection(sectionId) {
-            // Redirect to index.html with the specified section ID
-            window.location.href = "index.html#" + sectionId;
-        }
-    </script>
-  
 </head>
 <body>
 
@@ -31,10 +24,10 @@
 
     <div class="navigation-bar">
         <div>
-            <a href="#home">Home</a>
-            <a href="index#about">About</a>
-            <a href="index.html#services">Services</a>
-            <a href="index.html#team">Leadership</a>
+            <a href="index#home">Home</a>
+            <a href="#" onclick="navigateToSection('about')">About</a>
+            <a href="index#services">Services</a>
+            <a href="index#team">Leadership</a>
 <!--             <a href="Ranjeet_Aloriya.pdf" download>Resume</a> -->
             <a href="#contact">Contact Us</a>
         </div>
@@ -121,25 +114,7 @@
             <a href="mailto:ranjeet.aloriya@gmail.com" style="color: #fff;">info@bitsnbytes.in</a>
         </div>
     </div>
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            const links = document.querySelectorAll('.navigation-bar a');
-            links.forEach(link => {
-                link.addEventListener('click', smoothScroll);
-            });
-
-            function smoothScroll(e) {
-                e.preventDefault();
-                const targetId = this.getAttribute('href');
-                const targetElement = document.querySelector(targetId);
-                if (targetElement) {
-                    targetElement.scrollIntoView({
-                        behavior: 'smooth'
-                    });
-                }
-            }
-        });
-    </script>
+    <script src="router.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
