--- a/nl.html
+++ b/nl.html
@@ -25,10 +25,10 @@
 
     <div class="navigation-bar">
         <div>
-            <a href="./#home">Home</a>
-            <a href="./#about">About</a>
-            <a href="./#services">Services</a>
-            <a href="./#team">Leadership</a>
+            <a href="index#home">Home</a>
+            <a href="index#about">About</a>
+            <a href="index#services">Services</a>
+            <a href="index#team">Leadership</a>
 <!--             <a href="Ranjeet_Aloriya.pdf" download>Resume</a> -->
             <a href="#contact">Contact Us</a>
         </div>
@@ -111,26 +111,6 @@
             <a href="mailto:ranjeet.aloriya@gmail.com" style="color: #fff;">info@bitsnbytes.in</a>
         </div>
     </div>
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            const links = document.querySelectorAll('.navigation-bar a');
-            links.forEach(link => {
-                link.addEventListener('click', smoothScroll);
-            });
-
-            function smoothScroll(e) {
-                e.preventDefault();
-                const targetId = this.getAttribute('href');
-                const targetElement = document.querySelector(targetId);
-                if (targetElement) {
-                    targetElement.scrollIntoView({
-                        behavior: 'smooth'
-                    });
-                }
-            }
-        });
-    </script>
-
     <script src="script.js"></script>
 </body>
 </html>
