--- a/dbr.html
+++ b/dbr.html
@@ -24,8 +24,8 @@
 
     <div class="navigation-bar">
         <div>
-            <a href="index#home">Home</a>
-            <a href="#" onclick="navigateToSection('about')">About</a>
+            <a href="https://bitsnbytes.in/">Home</a>
+            <a href="index#about">About</a>
             <a href="index#services">Services</a>
             <a href="index#team">Leadership</a>
 <!--             <a href="Ranjeet_Aloriya.pdf" download>Resume</a> -->
@@ -114,7 +114,7 @@
             <a href="mailto:ranjeet.aloriya@gmail.com" style="color: #fff;">info@bitsnbytes.in</a>
         </div>
     </div>
-    <script src="router.js"></script>
+<!--     <script src="router.js"></script> -->
     <script src="script.js"></script>
 </body>
 </html>
