--- a/nl.html
+++ b/nl.html
@@ -25,7 +25,7 @@
 
     <div class="navigation-bar">
         <div>
-            <a href="index#home">Home</a>
+            <a href="https://bitsnbytes.in/">Home</a>
             <a href="index#about">About</a>
             <a href="index#services">Services</a>
             <a href="index#team">Leadership</a>
