--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Ready to take proactive steps towards enhancing your data security measures? Par
                 <img src="welcome.jpe" alt="Devender Malik">
                 <div class="layer">
                     <h3>Devender Malik</h3>
-                    <p>Founder & Chief Executive Officer</p>
+                    <p>Chief Executive Officer</p>
                         <a href="https://www.linkedin.com/in/dk-malik-a8020514b/"><i class="fab fa-linkedin"></i></a>
                 </div>
             </div>
