--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="#home">Home</a>
             <a href="/about">About</a>
             <a href="/services">Services</a>
-            <a href="/team">Leadership</a>
+<!--             <a href="/team">Leadership</a> -->
 <!--             <a href="Ranjeet_Aloriya.pdf" download>Resume</a> -->
             <a href="#contact">Contact Us</a>
         </div>
@@ -45,7 +45,7 @@
 
                 At the heart of our operations lies a profound proficiency in the extraction of confidential and sensitive data from a myriad of sources. We specialize in meticulously curating comprehensive notification lists, tailored to the precise requirements of our discerning clientele.
                 
-                Our track record speaks volumes about our unwavering dedication to delivering unparalleled quality and confidentiality in every endeavor. Trust us to safeguard your data integrity while delivering immaculate solutions that meet and exceed expectations.</p>
+                Our track record speaks volumes about our unwavering dedication to delivering unparalleled quality and confidentiality in every endeavour. Trust us to safeguard your data integrity while delivering immaculate solutions that meet and exceed expectations.</p>
         </div>
         <div class="welcome-image">
             <img src="welcome.jpeg" alt="Welcome Image">
@@ -66,7 +66,7 @@ At Bits and Bytes, we understand the critical importance of protecting sensitive
 
 <br><br><b>Our Approach</b><br><br>
 
-As your trusted partner, we are committed to delivering exceptional results that not only meet regulatory requirements but also align with your organization's unique objectives. We believe in a proactive approach to data security, offering personalized strategies designed to fortify your defenses, mitigate risks, and ensure compliance.
+As your trusted partner, we are committed to delivering exceptional results that not only meet regulatory requirements but also align with your organization's unique objectives. We believe in a proactive approach to data security, offering personalized strategies designed to fortify your defences, mitigate risks, and ensure compliance.
 
 <br><br><b>How Can We Help You?</b><br><br>
 
@@ -74,7 +74,7 @@ Whether you're a small startup or a large enterprise, Bits and Bytes offers end-
 
 <br><br><b>Let's Collaborate</b><br><br>
 
-Ready to take proactive steps towards enhancing your data security measures? Partner with Bits and Bytes today, and let's work together to strengthen your defenses, mitigate risks, and ensure a secure future for your organization.
+Ready to take proactive steps towards enhancing your data security measures? Partner with Bits and Bytes today, and let's work together to strengthen your defences, mitigate risks, and ensure a secure future for your organization.
 
 </p>
         </div>
@@ -104,7 +104,7 @@ Ready to take proactive steps towards enhancing your data security measures? Par
         </div>
     </section>
 
-    <section id="team" class="main">
+<!--     <section id="team" class="main">
         <h1 class="sub-title">Our Leadership</h1>
         <div class="work-list">
             <div class="work">
@@ -134,7 +134,7 @@ Ready to take proactive steps towards enhancing your data security measures? Par
         </div>
         <a href="#" class="btn">See More</a>
     </section>
-
+ -->
     <section id="contact" class="main">
         <h1 class="sub-title">Contact Us</h1>
     
