--- a/dbr.html
+++ b/dbr.html
@@ -27,7 +27,7 @@
             <a href="https://bitsnbytes.in/">Home</a>
             <a href="index#about">About</a>
             <a href="index#services">Services</a>
-            <a href="index#team">Leadership</a>
+<!--             <a href="index#team">Leadership</a> -->
 <!--             <a href="Ranjeet_Aloriya.pdf" download>Resume</a> -->
             <a href="#contact">Contact Us</a>
         </div>
