--- a/dm.html
+++ b/dm.html
@@ -28,7 +28,7 @@
             <a href="https://bitsnbytes.in/">Home</a>
             <a href="index#about">About</a>
             <a href="index#services">Services</a>
-            <a href="index#team">Leadership</a>
+<!--             <a href="index#team">Leadership</a> -->
 <!--             <a href="Ranjeet_Aloriya.pdf" download>Resume</a> -->
             <a href="#contact">Contact Us</a>
         </div>
@@ -39,34 +39,34 @@
 
     <section id="services" class="main">
         <h1 class="sub-title">Data Mining</h1>
-        <p>Are you grappling with the complexities of data breaches, struggling to extract valuable insights from diverse document types? Look no further. As an independent consultant specializing in data mining for data breach reviews, I bring to the table a suite of top-notch services designed to uncover hidden patterns and safeguard your organization's sensitive information.<br><br><br>Here's how my expertise can benefit your organization:</p>
+        <p>Are you grappling with the complexities of data breaches, struggling to extract valuable insights from diverse document types? Look no further. We specializing in data mining for data breach reviews, We bring to the table a suite of top-notch services designed to uncover hidden patterns and safeguard your organization's sensitive information.<br><br><br>Here's how our expertise can benefit your organization:</p>
         <div class="services-list">
             <div class="work-s">
                 <h2>Advanced Data Mining Techniques</h2>
-                <p>Leveraging cutting-edge tools including Excel, SQL, Power Query, Python, and proprietary software, I employ advanced data mining techniques to sift through vast datasets and extract actionable intelligence. From structured databases to unstructured documents like PDFs, Word files, TXT, and XML, I leave no stone unturned in the quest for valuable insights.</p>
+                <p>Leveraging cutting-edge tools including Excel, SQL, Power Query, Python, and proprietary software, We employ advanced data mining techniques to sift through vast datasets and extract actionable intelligence. From structured databases to unstructured documents like PDFs, Word files, TXT, and XML, We leave no stone unturned in the quest for valuable insights.</p>
             </div>
             <div class="work-s">
                 <h2>PII and PHI Extraction</h2>
-                <p>Protecting Personally Identifiable Information (PII) and Protected Health Information (PHI) is paramount in today's regulatory landscape. Using sophisticated algorithms and techniques, I meticulously extract PII and PHI data from multiple document types, ensuring compliance with data protection laws and regulations.</p>
+                <p>Protecting Personally Identifiable Information (PII) and Protected Health Information (PHI) is paramount in today's regulatory landscape. Using sophisticated algorithms and techniques, We meticulously extract PII and PHI data from multiple document types, ensuring compliance with data protection laws and regulations.</p>
             </div>
             <div class="work-s">
                 <h2>Tailored Solutions for Diverse Needs</h2>
-                <p>Recognizing that every organization has unique data mining requirements, I offer tailored solutions customized to your specific needs and challenges. Whether you're a small startup or a multinational corporation, my services are designed to scale and adapt to your evolving needs.</p>
+                <p>Recognizing that every organization has unique data mining requirements, We offer tailored solutions customized to your specific needs and challenges. Whether you're a small startup or a multinational corporation, my services are designed to scale and adapt to your evolving needs.</p>
             </div>
             <div class="work-s">
                 <h2>Comprehensive Document Analysis</h2>
-                <p>From financial records to customer databases, I conduct comprehensive document analysis to identify anomalies, trends, and potential security risks. My goal is to empower you with actionable insights that enable informed decision-making and proactive risk management.</p>
+                <p>From financial records to customer databases, We conduct comprehensive document analysis to identify anomalies, trends, and potential security risks. Our goal is to empower you with actionable insights that enable informed decision-making and proactive risk management.</p>
             </div>
             <div class="work-s">
                 <h2>Rapid Response and Resolution</h2>
-                <p>In the event of a data breach, time is of the essence. With my rapid response capabilities, I help you identify and contain breaches swiftly, minimizing the impact on your organization's reputation and bottom line.</p>
+                <p>In the event of a data breach, time is of the essence. With our rapid response capabilities, We help you identify and contain breaches swiftly, minimizing the impact on your organization's reputation and bottom line.</p>
             </div>
             <div class="work-s">
                 <h2>Expert Guidance and Support</h2>
-                <p>Throughout our engagement, you can count on me to provide expert guidance and support every step of the way. From initial data assessment to post-breach remediation, I am committed to helping you navigate the complexities of data security with confidence.</p>
+                <p>Throughout our engagement, you can count on us to provide expert guidance and support every step of the way. From initial data assessment to post-breach remediation, We are committed to helping you navigate the complexities of data security with confidence.</p>
             </div>
         </div>
-        <p>Don't let data breaches jeopardize the security and integrity of your organization's sensitive information. Partner with me to unlock the power of data mining and safeguard your valuable assets against emerging threats.<br><br><br>Let's connect to discuss how I can support your data security goals.</p>
+        <p>Don't let data breaches jeopardize the security and integrity of your organization's sensitive information. Partner with me to unlock the power of data mining and safeguard your valuable assets against emerging threats.<br><br><br>Let's connect to discuss how We can support your data security goals.</p>
     </section>
 
     <section id="contact" class="main">
