--- a/nl.html
+++ b/nl.html
@@ -28,7 +28,7 @@
             <a href="https://bitsnbytes.in/">Home</a>
             <a href="index#about">About</a>
             <a href="index#services">Services</a>
-            <a href="index#team">Leadership</a>
+<!--             <a href="index#team">Leadership</a> -->
 <!--             <a href="Ranjeet_Aloriya.pdf" download>Resume</a> -->
             <a href="#contact">Contact Us</a>
         </div>
@@ -39,30 +39,30 @@
 
     <section id="services" class="main">
         <h1 class="sub-title">Notification List Creation</h1>
-        <p>Are you equipped to navigate the intricacies of data breach response, including the creation of comprehensive notification lists? As an independent consultant specializing in notification list creation for data breach reviews, I offer top-notch services designed to streamline the process and ensure compliance with regulatory requirements.<br><br><br>Here's how my services can add value to your organization:</p>
+        <p>Are you equipped to navigate the intricacies of data breach response, including the creation of comprehensive notification lists? As a consultancy specializing in notification list creation for data breach reviews, We offer top-notch services designed to streamline the process and ensure compliance with regulatory requirements.<br><br><br>Here's how our services can add value to your organization:</p>
         <div class="services-list">
             <div class="work-s">
                 <h2>Advanced Data Consolidation Techniques</h2>
-                <p>Leveraging advanced tools such as Excel, SQL, Power Query, Python, and proprietary software, I employ sophisticated data consolidation techniques to merge and de-duplicate entries based on Personally Identifiable Information (PII) and Protected Health Information (PHI) elements. This ensures that the notification list is accurate, concise, and compliant with privacy regulations.</p>
+                <p>Leveraging advanced tools such as Excel, SQL, Power Query, Python, and proprietary software, We employ sophisticated data consolidation techniques to merge and de-duplicate entries based on Personally Identifiable Information (PII) and Protected Health Information (PHI) elements. This ensures that the notification list is accurate, concise, and compliant with privacy regulations.</p>
             </div>
             <div class="work-s">
                 <h2>Tailored Solutions for Comprehensive Notification</h2>
-                <p>Recognizing the importance of thorough communication in times of crisis, I offer tailored solutions customized to your organization's unique needs and challenges. Whether you're notifying law enforcement agencies, affected businesses, or individuals, my services are designed to ensure prompt and effective communication.</p>
+                <p>Recognizing the importance of thorough communication in times of crisis, We offer tailored solutions customized to your organization's unique needs and challenges. Whether you're notifying law enforcement agencies, affected businesses, or individuals, our services are designed to ensure prompt and effective communication.</p>
             </div>
             <div class="work-s">
                 <h2>Regulatory Compliance Assurance</h2>
-                <p>Compliance with data protection regulations is non-negotiable. Rest assured, I have a deep understanding of regulatory requirements and can help you navigate the notification process with confidence. From GDPR to HIPAA, I ensure that your organization remains compliant with applicable laws and regulations.</p>
+                <p>Compliance with data protection regulations is non-negotiable. Rest assured, We have a deep understanding of regulatory requirements and can help you navigate the notification process with confidence. From GDPR to HIPAA, We ensure that your organization remains compliant with applicable laws and regulations.</p>
             </div>
             <div class="work-s">
                 <h2>Efficient Notification Process</h2>
-                <p>Time is of the essence in the event of a data breach. With my efficient notification process, I help you notify stakeholders promptly, minimizing the impact on your organization's reputation and bottom line. From consolidating entries to drafting notification letters, I handle every aspect of the notification process with professionalism and expertise.</p>
+                <p>Time is of the essence in the event of a data breach. With our efficient notification process, We help you notify stakeholders promptly, minimizing the impact on your organization's reputation and bottom line. From consolidating entries to drafting notification letters, We handle every aspect of the notification process with professionalism and expertise.</p>
             </div>
             <div class="work-s">
                 <h2>Expert Guidance and Support</h2>
-                <p>Throughout our engagement, you can count on me to provide expert guidance and support every step of the way. From initial data consolidation to post-notification follow-up, I am committed to helping you navigate the complexities of data breach response with confidence.</p>
+                <p>Throughout our engagement, you can count on us to provide expert guidance and support every step of the way. From initial data consolidation to post-notification follow-up, We are committed to helping you navigate the complexities of data breach response with confidence.</p>
             </div>
         </div>
-        <p>Don't let the challenges of data breach response overwhelm you. Partner with me to secure your response and ensure timely and effective communication with stakeholders.<br><br><br>Let's connect to discuss how I can support your data security goals.</p>
+        <p>Don't let the challenges of data breach response overwhelm you. Partner with us to secure your response and ensure timely and effective communication with stakeholders.<br><br><br>Let's connect to discuss how We can support your data security goals.</p>
     </section>
 
     <section id="contact" class="main">
