--- a/dbr.html
+++ b/dbr.html
@@ -38,11 +38,11 @@
 
     <section id="services" class="main">
         <h1 class="sub-title">Data Breach Review</h1>
-        <p>In today's interconnected world, the protection of sensitive data is paramount. As an independent consultant specializing in data breach review, We are committed to offering you top-notch services to fortify your organization's defences and ensure the integrity of your data.<br><br><br>how my services can add value to your organization:</p>
+        <p>In today's interconnected world, the protection of sensitive data is paramount. As an independent consultant specializing in data breach review, We are committed to offering you top-notch services to fortify your organization's defences and ensure the integrity of your data.<br><br><br>how our services can add value to your organization:</p>
         <div class="services-list">
             <div class="work-s">
                 <h2>Comprehensive Data Breach Assessments</h2>
-                <p>Utilizing advanced techniques and industry best practices, We conduct comprehensive assessments to identify potential vulnerabilities and weak points in your data security infrastructure. My goal is to uncover risks before they manifest into costly breaches.</p>
+                <p>Utilizing advanced techniques and industry best practices, We conduct comprehensive assessments to identify potential vulnerabilities and weak points in your data security infrastructure. Our goal is to uncover risks before they manifest into costly breaches.</p>
             </div>
             <div class="work-s">
                 <h2>Tailored Solutions for Maximum Protection</h2>
@@ -50,7 +50,7 @@
             </div>
             <div class="work-s">
                 <h2>Rapid Response and Resolution</h2>
-                <p>Should a breach occur, time is of the essence. With my swift incident response capabilities, We will help you contain the breach, mitigate its impact, and restore normal operations with minimal disruption. You can count on me to be your trusted partner in crisis management.</p>
+                <p>Should a breach occur, time is of the essence. With our swift incident response capabilities, We will help you contain the breach, mitigate its impact, and restore normal operations with minimal disruption. You can count us to be your trusted partner in crisis management.</p>
             </div>
             <div class="work-s">
                 <h2>Regulatory Compliance Expertise</h2>
@@ -65,7 +65,7 @@
                 <p>We believe in the importance of open communication and transparency. Throughout our engagement, you can expect clear and concise reporting, along with regular updates on the status of your data security initiatives.</p>
             </div>
         </div>
-        <p>Don't leave your organization's data security to chance. Partner with me to fortify your defences and safeguard your valuable assets against cyber threats. Together, we can build a stronger, more resilient future for your business.<br><br><br>Let's connect to discuss how I can support your data security goals.</p>
+        <p>Don't leave your organization's data security to chance. Partner with us to fortify your defences and safeguard your valuable assets against cyber threats. Together, we can build a stronger, more resilient future for your business.<br><br><br>Let's connect to discuss how I can support your data security goals.</p>
     </section>
 
     <section id="contact" class="main">
