--- a/dm.html
+++ b/dm.html
@@ -51,7 +51,7 @@
             </div>
             <div class="work-s">
                 <h2>Tailored Solutions for Diverse Needs</h2>
-                <p>Recognizing that every organization has unique data mining requirements, We offer tailored solutions customized to your specific needs and challenges. Whether you're a small startup or a multinational corporation, my services are designed to scale and adapt to your evolving needs.</p>
+                <p>Recognizing that every organization has unique data mining requirements, We offer tailored solutions customized to your specific needs and challenges. Whether you're a small startup or a multinational corporation, our services are designed to scale and adapt to your evolving needs.</p>
             </div>
             <div class="work-s">
                 <h2>Comprehensive Document Analysis</h2>
@@ -66,7 +66,7 @@
                 <p>Throughout our engagement, you can count on us to provide expert guidance and support every step of the way. From initial data assessment to post-breach remediation, We are committed to helping you navigate the complexities of data security with confidence.</p>
             </div>
         </div>
-        <p>Don't let data breaches jeopardize the security and integrity of your organization's sensitive information. Partner with me to unlock the power of data mining and safeguard your valuable assets against emerging threats.<br><br><br>Let's connect to discuss how We can support your data security goals.</p>
+        <p>Don't let data breaches jeopardize the security and integrity of your organization's sensitive information. Partner with us to unlock the power of data mining and safeguard your valuable assets against emerging threats.<br><br><br>Let's connect to discuss how We can support your data security goals.</p>
     </section>
 
     <section id="contact" class="main">
